2013-04-13 Niels Grewe <niels.grewe@halbordnung.de>
	* Source/DKNotificationCenter.m
	* Source/DKObjectPathNode.m
	* Source/DKPortNameServer.m
	* Source/DKProxy.m
	* Tests/TestDKArgument.m:
	Backport bugfixes from r33826.
	* Source/DKProperty.m
	* Source/DKPropertyMethod.m:
	Backport bugfixes from r33885.
	* Source/DKArgument.m: Backport bugfixes from r33943.
	* Source/DKNotificationCenter.m
	* SOurce/DKProxy.m:
	Backport r33946 (fixes a memory leak).

	Backport bugfixes from trunk.

2013-04-12 Niels Grewe <niels.grewe@halbordnung.de>

	* Source/DKArgument.m
	* Source/DKNotificationCenter.m:
	Backport r35592: Deal with clang warning about casting SEL to
	uintptr_t.
	* Documentation/announce.0.1.1.texi: Draft release announcement.
	* GNustep.preamble: Bump version.

2013-04-12 Niels Grewe <niels.grewe@halbordnung.de>

	* Source/DKEndpoint.m: Backport r35789: Replace incorrect
	NSDebugMLog with NSDebugFLog. Reported by Philippe Roussell.

2011-12-20 Niels Grewe <niels.grewe@halbordnung.de>

	* configure.ac: When selecting an Objective-C compiler, prefer the
	value of $CC if $OBJC is not set. Also, if the user does not specify
	a specific compiler and clang is installed, default to using clang.
	* config.make.in: Update for new compiler selection.
	* configure: Regenerate.

2011-05-17 Andreas Schik <andreas.schick@web.de>

	* Source/DKNotificationCenter.m: Fix off-by-one error when
	computing the interface from a notification name.

2011-04-29 Niels Grewe <niels.grewe@halbordnung.de>

	* Source/DKNotificationCenter.m: Fix incorrect return statement.

2011-04-15 Niels Grewe <niels.grewe@halbordnung.de>

	* Tests/TestDKArgument.m: Fix word-size issues.
	* Documentation/install.texi: Bump required gnustep-base
	version to 1.22.0.
	* INSTALL: Regenerate.

2011-04-11 Niels Grewe <niels.grewe@halbordnung.de>

	* Source/DKEndpointManager.m: Use pseudo interfaces instead of
	@class declarations for private classes that need to be