@@ -341,7 +341,7 @@
 {
   DKArgument *valueArgument = [inArgs objectAtIndex: 2];
   size_t valueSize = 0;
-  char *valueType = NULL;
+  const char *valueType = NULL;
   if (doBox)
   {
     valueSize = sizeof(id);
