@@ -103,6 +103,18 @@ else
   WARN_FLAGS="-Wall"
 fi
 
+AC_MSG_CHECKING(whether the compiler supports -Wno-deprecated-declarations)
+saved_CFLAGS="$CFLAGS"
+CFLAGS="$CFLAGS -Wno-deprecated-declarations"
+AC_COMPILE_IFELSE([AC_LANG_PROGRAM()],HAS_W_NO_DEPRECATED_DECL=yes,HAS_W_NO_DEPRECATED_DECL=no)
+CFLAGS="$saved_CFLAGS"
+
+AC_MSG_RESULT($HAS_W_NO_DEPRECATED_DECL)
+
+if test x"$HAS_W_NO_DEPRECATED_DECL" = x"yes"; then
+  WARN_FLAGS="$WARN_FLAGS -Wno-deprecated-declarations"
+fi
+
 AC_SUBST(WARN_FLAGS)
 AC_SUBST(ATOMIC_CFLAGS)
 
