@@ -1,3 +1,13 @@
+2013-04-14 Niels Grewe <niels.grewe@halbordnung.de>
+	* Source/DKMethod.h
+	* Source/DKMethod.m
+	* Source/DKPropertyMethod.m:
+	A few warning fixes.
+	* configure.ac:
+	Test for -Wno-deprecated-declarations
+	* configure:
+	Regenerate.
+
 2013-04-13 Niels Grewe <niels.grewe@halbordnung.de>
 	* Source/DKNotificationCenter.m
 	* Source/DKObjectPathNode.m
